# retrofit

./: .gitignore  README.md  cloudbuild.yaml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  debug_scraper.py  pyproject.toml  requirements.txt  test_patch_spec.py  test_pipeline.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  ad_analyzer.py  code_modifier.py  copywriter.py  cro_strategist.py  graph.py  page_scraper.py  qa_verifier.py  state.py  utils.py
backend/app/models/: __init__.py  ad_context.py  cro_findings.py  patch_spec.py  pipeline.py  qa_report.py  semantic_map.py  shared.py
backend/app/prompts/: __init__.py  ad_analyzer.py  code_modifier.py  copywriter.py  cro_strategist.py  qa_verifier.py
backend/app/routes/: __init__.py  health.py  preview.py  runs.py
backend/app/storage/: __init__.py  artifacts.py
backend/app/tools/: __init__.py  dom_mapper.py  html_patcher.py  scraper.py  screenshot.py  shopify.py  url_rewriter.py  validators.py
backend/tests/: test_dom_mapper.py  test_html_patcher.py  test_models.py
frontend/: .dockerignore  Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/pipeline/: PipelineTimeline.tsx  StreamingLog.tsx
frontend/components/results/: AuditReport.tsx  BeforeAfterSlider.tsx  CROScorecard.tsx  ExplanationPanel.tsx  PagePreview.tsx
frontend/hooks/: useAdUpload.ts  usePipelineRun.ts  useSSE.ts
frontend/lib/: api.ts  types.ts  utils.ts
(+17 files in other folders)
